# openEnv-hackathon

./: Dockerfile  LICENSE  README.md  docker-compose.yml  inference.py  pyproject.toml
envs/shop_sku_manager/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/shop_sku_manager/server/: Dockerfile  __init__.py  app.py  environment.py
examples/: shop_sku_baseline.py  shop_sku_baseline_ollama.py
server/: app.py
