[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-hackathon"
version = "0.1.0"
description = "Shop SKU Manager - OpenEnv hackathon submission"
readme = "envs/shop_sku_manager/README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.25.0",
    "websockets>=15.0.1",
    "numpy>=1.24.0",
    "openai>=2.7.2",
    "openenv-core @ git+https://github.com/meta-pytorch/OpenEnv.git",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["server*", "envs*"]

[tool.ruff]
line-length = 100
target-version = "py310"
